--- a/predicciones/predicciones.ipynb
+++ b/predicciones/predicciones.ipynb
@@ -1783,6 +1783,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a42acf04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test_path = os.path.join(BASE_DIR, 'dataset_f3.csv')\n",
+    "dataset_test = pd.read_csv(df_test_path)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "73a6db65",
    "metadata": {},
@@ -1792,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "4a254024",
    "metadata": {},
    "outputs": [
@@ -1800,25 +1811,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔄 Sincronizando columnas entre train y val...\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'startswith'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[40], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(aux_t)\n\u001b[1;32m----> 2\u001b[0m (y_train_array_fixed, X_train_clean_fixed, y_test_array_fixed, X_test_clean_fixed, target_columns_sorted_test, columnas_eliminadas) \u001b[38;5;241m=\u001b[39m \u001b[43maux_t\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mequiparar_columnas\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meliminadas: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mlen\u001b[39m(columnas_eliminadas))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mNeuralNetworkGrande\u001b[39;00m(nn\u001b[38;5;241m.\u001b[39mModule):\n",
-      "File \u001b[1;32mc:\\Users\\felic\\OneDrive\\Documentos\\GitHub\\TPsM-todos\\BA_BICIS_MyC\\predicciones\\aux_test.py:124\u001b[0m, in \u001b[0;36mequiparar_columnas\u001b[1;34m(ds_train_3, ds_val_3)\u001b[0m\n\u001b[0;32m    121\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🔄 Sincronizando columnas entre train y val...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    123\u001b[0m \u001b[38;5;66;03m# Obtener columnas de features (sin targets)\u001b[39;00m\n\u001b[1;32m--> 124\u001b[0m train_feature_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(\u001b[43m[\u001b[49m\u001b[43mcol\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mcol\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mds_train_3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mcol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstartswith\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtarget_estacion_\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[0;32m    125\u001b[0m val_feature_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m([col \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m ds_val_3\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m col\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget_estacion_\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[0;32m    127\u001b[0m \u001b[38;5;66;03m# Obtener columnas de targets\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\felic\\OneDrive\\Documentos\\GitHub\\TPsM-todos\\BA_BICIS_MyC\\predicciones\\aux_test.py:124\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    121\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🔄 Sincronizando columnas entre train y val...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    123\u001b[0m \u001b[38;5;66;03m# Obtener columnas de features (sin targets)\u001b[39;00m\n\u001b[1;32m--> 124\u001b[0m train_feature_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m([col \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m ds_train_3\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mcol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstartswith\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget_estacion_\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[0;32m    125\u001b[0m val_feature_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m([col \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m ds_val_3\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m col\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget_estacion_\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[0;32m    127\u001b[0m \u001b[38;5;66;03m# Obtener columnas de targets\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'startswith'"
+      "type dataset_train:  <class 'pandas.core.frame.DataFrame'>\n",
+      "type dataset_test:  <class 'pandas.core.frame.DataFrame'>\n",
+      "🔄 Sincronizando columnas entre train y val...\n",
+      "📊 Features - Train: 395, Val: 384\n",
+      "🎯 Targets - Train: 370, Val: 370\n",
+      "❌ Features solo en train (serán eliminadas): 11\n",
+      "❌ Targets solo en train (serán eliminadas): 0\n",
+      "❌ Features solo en val/test (serán eliminadas): 0\n",
+      "❌ Targets solo en val/test (serán eliminadas): 0\n",
+      "❌ Features faltantes en val: 11\n",
+      "❌ Targets faltantes en val: 0\n",
+      "\n",
+      "🗑️ Features eliminadas de TRAIN:\n",
+      "   1. 151\n",
+      "   2. 205\n",
+      "   3. 23\n",
+      "   4. 233\n",
+      "   5. 30\n",
+      "   6. 31\n",
+      "   7. 459\n",
+      "   8. 485\n",
+      "   9. 51\n",
+      "   10. 523\n",
+      "   11. 95\n",
+      "\n",
+      "✅ Train sincronizado - Shape: (15255, 754)\n",
+      "✅ Val sincronizado - Shape: (7, 754)\n",
+      "✅ Columnas coinciden: True\n",
+      "\n",
+      "🎯 X_train_fixed shape: (15255, 384)\n",
+      "🎯 y_train_fixed shape: (15255, 370)\n",
+      "🎯 X_val_fixed shape: (7, 384)\n",
+      "🎯 y_val_fixed shape: (7, 370)\n",
+      "\n",
+      "🔮 Preparando datos sincronizados...\n",
+      "\n",
+      "📊 Verificando dimensiones finales:\n",
+      "   • X_train shape: (15255, 383)\n",
+      "   • X_val shape: (7, 383)\n",
+      "   • Columnas coinciden: True\n",
+      "eliminadas:  6\n",
+      "📊 Aplicando StandardScaler...\n",
+      "🖥️ Usando dispositivo: cpu\n",
+      "🏗️ Arquitectura: 383 -> 600 -> 500 -> 400 -> 300 -> 370\n",
+      "💧 Dropout: 0.3\n",
+      "\n",
+      "🚀 Iniciando entrenamiento por 30 épocas...\n",
+      "📦 Batch size: 128\n",
+      "📈 Learning rate: 0.001\n",
+      "Época [1/30] - Train Loss: 1.589095, Val Loss: 5.061310\n",
+      "Época [5/30] - Train Loss: 1.258209, Val Loss: 4.729390\n",
+      "Época [10/30] - Train Loss: 1.208186, Val Loss: 4.560747\n",
+      "Época [15/30] - Train Loss: 1.186261, Val Loss: 4.473938\n",
+      "Época [20/30] - Train Loss: 1.165648, Val Loss: 4.299084\n",
+      "Época [25/30] - Train Loss: 1.163550, Val Loss: 4.356351\n",
+      "Época [30/30] - Train Loss: 1.152064, Val Loss: 4.105296\n",
+      "\n",
+      "✅ Entrenamiento completado!\n",
+      "📈 Val loss final: 4.105296\n",
+      "\n",
+      "🔮 Generando predicciones finales...\n",
+      "\n",
+      "🏆 Métricas finales modelo óptimo:\n",
+      "   MAE: 1.4019\n",
+      "   R²: -0.4104\n",
+      "   RMSE: 2.0519\n",
+      "   Val Loss final: 4.105296\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(aux_t)\n",
+    "\n",
+    "print(\"type dataset_train: \", type(dataset_train))\n",
+    "print(\"type dataset_test: \", type(dataset_test))\n",
     "(y_train_array_fixed, X_train_clean_fixed, y_test_array_fixed, X_test_clean_fixed, target_columns_sorted_test, columnas_eliminadas) = aux_t.equiparar_columnas(dataset_train, dataset_test)\n",
     "print(\"eliminadas: \", len(columnas_eliminadas))\n",
     "class NeuralNetworkGrande(nn.Module):\n",
@@ -1963,6 +2030,37 @@
     "print(f\"   R²: {r2:.4f}\")\n",
     "print(f\"   RMSE: {rmse:.4f}\")\n",
     "print(f\"   Val Loss final: {test_losses[-1]:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ca8c28ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las predicciones finales son:  [[4 4 7 ... 0 0 0]\n",
+      " [4 3 6 ... 0 0 0]\n",
+      " [5 4 7 ... 0 0 0]\n",
+      " ...\n",
+      " [3 3 5 ... 0 0 0]\n",
+      " [2 5 5 ... 0 0 0]\n",
+      " [2 4 5 ... 0 0 0]]\n",
+      "Todas las estaciones no presentes predicen 0 porque eran en su mayoría 0. No se utilizaron para el entrenamiento porque tenían muy pocos viajes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Las predicciones finales son: \", predictions_pytorch)\n",
+    "# Guardar las predicciones finales en un CSV\n",
+    "predictions_df = pd.DataFrame(predictions_pytorch, columns=target_columns_sorted_test)\n",
+    "\n",
+    "predictions_df.to_csv(os.path.join(BASE_DIR, 'predicciones_finales.csv'), index=False)\n",
+    "\n",
+    "print(\"Todas las estaciones no presentes predicen 0 porque eran en su mayoría 0. No se utilizaron para el entrenamiento porque tenían muy pocos viajes.\")"
    ]
   }
  ],
